--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="web.html">I Coder</a>
+            <a class="navbar-brand" href="index.html">I Coder</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="web.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -227,7 +227,7 @@
                             <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                         </div>
                         <div class="col-auto d-none d-lg-block">
-                            <img class="bd-placeholder-img" src="thum1.jpg" alt="">
+                            <img class="bd-placeholder-img" src="thum2.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -239,7 +239,7 @@
                             <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                         </div>
                         <div class="col-auto d-none d-lg-block">
-                            <img class="bd-placeholder-img" src="thum2.jpg" alt="">
+                            <img class="bd-placeholder-img" src="thum3.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -253,7 +253,7 @@
                             <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
                         </div>
                         <div class="col-auto d-none d-lg-block">
-                            <img class="bd-placeholder-img" src="thum3.jpg" alt="">
+                            <img class="bd-placeholder-img" src="thum1.jpg" alt="">
                         </div>
                     </div>
                 </div>
